--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -2,10 +2,10 @@
 <md-toolbar layout="row" class="md-whiteframe-z3" style="padding:0px;margin:0px;">
  <h2 style="padding-left:10px">Food Truck Finder</h2>
  <a style="padding-left:500px;color:#fff; padding-top:20px"  ng-click = "logout()"> LOG OUT </a>
- </md-toolbar>`
+ </md-toolbar>
 </div>
 
-<div id="profile" ng-if="showProfile">
+<div id="profile">
 	<p>
 		<span class="property">Name:</span>
 		<span class="value">{{user.name}}</span>
@@ -24,349 +24,16 @@
 			<ul>
 				<li ng-repeat="location in user.locations">
 					<p>Address: {{location.address}}</p>
-					<p>Hours: {{location.hours}}</p>
+					<p>Hours:</p>
+					<p ng-if="location.hours['1'][0] != null">Mon: {{location.hours["1"][0]}} - {{location.hours["1"][1]}}</p>
+					<p ng-if="location.hours['2'][0] != null">Tue: {{location.hours["2"][0]}} - {{location.hours["2"][1]}}</p>
+					<p ng-if="location.hours['3'][0] != null">Wed: {{location.hours["3"][0]}} - {{location.hours["3"][1]}}</p>
+					<p ng-if="location.hours['4'][0] != null">Thu: {{location.hours["4"][0]}} - {{location.hours["4"][1]}}</p>
+					<p ng-if="location.hours['5'][0] != null">Fri: {{location.hours["5"][0]}} - {{location.hours["5"][1]}}</p>
+					<p ng-if="location.hours['6'][0] != null">Sat: {{location.hours["6"][0]}} - {{location.hours["6"][1]}}</p>
+					<p ng-if="location.hours['0'][0] != null">Sun: {{location.hours["0"][0]}} - {{location.hours["0"][1]}}</p>
 				</li>
 			</ul>
 		</span>
 	</p>
-
-</div>
-
-<div id="editProfile" style="padding: 20px" ng-show="editProfile">
-	<h2>You have no profile yet!</h2>
-	<h3>Edit Profile</h3>
-		<form>
-		    <label>Enter your truck name</label>
-	        <input type="text" name="name" ng-model="name"><br>
-	        <label>Upload your truck image</label>
-	        <input type="file"><br>
-	        <label for="cuisine">Cuisine</label>
-	        <select id="cuisine" ng-model="cuisine">
-	          <option value="american">American</option>
-	          <option value="mexican">Mexican</option>
-	          <option value="japanese">Japanese</option>
-	          <option value="italian">Italian</option>
-	          <option value="thai">Thai</option>
-	          <option value="indian">Indian</option>
-	          <option value="french">French</option>
-	          <option value="vietnamese">Vietnamese</option>
-	          <option value="chinese">Chinese</option>
-	          <option value="mediterranean">Mediterranean</option>
-	        </select><br>
-	        <label>Select your truck location</label><br>
-	        <input type="text" placeholder="Enter your address" ng-model="address"><br>
-	        <label>Select your business hours</label><br>
-	        <label>Mon: </label>
-	        <select id="start1" ng-model="start1">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select>
-	        <span> - </span>
-	        <select id="end1" ng-model="end1">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select><br>
-	        <label>Tue: </label>
-	        <select id="start2" ng-model="start2">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select>
-	        <span> - </span>
-	        <select id="end2" ng-model="end2">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select><br>
-	        <label>Wed: </label>
-	        <select id="start3" ng-model="start3">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select>
-	        <span> - </span>
-	        <select id="end3" ng-model="end3">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select><br>
-	        <label>Thu: </label>
-	        <select id="start4" ng-model="start4">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select>
-	        <span> - </span>
-	        <select id="end4" ng-model="end4">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select><br>
-	        <label>Fri: </label>
-	        <select id="start5" ng-model="start5">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select>
-	        <span> - </span>
-	        <select id="end5" ng-model="end5">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select><br>
-	        <label>Sat: </label>
-	        <select id="start6" ng-model="start6">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select>
-	        <span> - </span>
-	        <select id="end6" ng-model="end6">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select><br>
-	        <label>Sun: </label>
-	        <select id="start0" ng-model="start0">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select>
-	        <span> - </span>
-	        <select id="end0" ng-model="end0">
-	          <option value="0">12AM</option>
-	          <option value="6">6AM</option>
-	          <option value="7">7AM</option>
-	          <option value="8">8AM</option>
-	          <option value="9">9AM</option>
-	          <option value="10">10AM</option>
-	          <option value="11">11AM</option>
-	          <option value="12">12PM</option>
-	          <option value="13">1PM</option>
-	          <option value="14">2PM</option>
-	          <option value="15">3PM</option>
-	          <option value="16">4PM</option>
-	          <option value="17">5PM</option>
-	          <option value="18">6PM</option>
-	          <option value="19">7PM</option>
-	          <option value="20">8PM</option>
-	          <option value="21">9PM</option>
-	          <option value="22">10PM</option>
-	          <option value="23">11PM</option>
-	        </select><br>
-
-	        <button ng-click="toEditProfile()">Submit</button>
-	      </form>
-</div>
-
 <button ng-click="logout()">Log Out</button>
