[add] placeholder text for input field

--- a/client/trucks/findtrucks.html
+++ b/client/trucks/findtrucks.html
@@ -9,7 +9,7 @@
 	<div layout layout-wrap layout-sm="column" layout-xs="column" style="min-height:100vh" layout-align="center" >
 
 <form>
-	<input ng-model="truckName">
+	<input ng-model="truckName", placeholder="Enter Truck Name here!">
 	<button ng-click="searchTruck()">Go!</button>
 	<button ng-click="getTrucks()">Search Trucks Near You!</button>
 </form>
